Change tool results CSS again, should prevent wrapping

--- a/static/main.css
+++ b/static/main.css
@@ -150,10 +150,7 @@ input[type=file] {
 }
 
 #toolresults {
-    display: grid;
-    grid-gap: 0.2em;
-    grid-auto-rows: 1fr;
-    grid-template-columns: repeat(auto-fill, 150px);
+
 }
 
 #flagResults {
